Bug 421448 - Crash when opening files from Finder
Summary: Crash when opening files from Finder
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 4.3.0-beta1
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
: 418937 425442 428117 429548 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-13 06:59 UTC by Yu-Hsuan Lai
Modified: 2021-01-15 04:54 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
system.log is the crash log shown by the OS. (75.89 KB, text/plain)
2020-05-13 06:59 UTC, Yu-Hsuan Lai
Details
Crash log from master branch. (89.17 KB, text/plain)
2020-11-24 17:08 UTC, amyspark
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yu-Hsuan Lai 2020-05-13 06:59:09 UTC
Created attachment 128416 [details]
system.log is the crash log shown by the OS.

SUMMARY
Krita crashes when I try to open a PSD file from Finder.

STEPS TO REPRODUCE
1. Make sure there is no a Krita instance running
2. Open Finder
3. Right click on a PSD file
4. "Open With" -> "Other..." -> select Krita

OBSERVED RESULT
The splash art shows up; then Krita crashes.

EXPECTED RESULT
Krita is launched with the given PSD opened.

SOFTWARE/OS VERSIONS
macOS: 10.14.6
Krita: 4.3.0-beta1

ADDITIONAL INFORMATION
If Krita is already opened when I do this, then nothing happens. The PSD won't be opened and Krita won't crash.
If I open the PSD from Krita ("File" -> "Open...", instead of from Finder), everything works as expected.
Comment 1 vanyossi 2020-05-13 19:07:25 UTC
I can confirm this bug to happen with any file
Comment 2 Halla Rempt 2020-05-14 07:49:34 UTC
Weird... I just tried on my mac, but it worked. So I guess there's something wrong with the deploy script? Does it work with your home-build krita and does the crash only happen with the distributed beta?
Comment 3 Tyson Tan 2020-08-04 02:51:29 UTC
Today a user reported this exact same issue to me.
Comment 4 vanyossi 2020-08-07 22:22:59 UTC
*** Bug 418937 has been marked as a duplicate of this bug. ***
Comment 5 vanyossi 2020-08-18 21:41:01 UTC
*** Bug 425442 has been marked as a duplicate of this bug. ***
Comment 6 Halla Rempt 2020-11-24 13:18:07 UTC
*** Bug 429548 has been marked as a duplicate of this bug. ***
Comment 7 amyspark 2020-11-24 17:08:57 UTC
Created attachment 133610 [details]
Crash log from master branch.

I attach a crash from the master branch (2e5608c).
Comment 8 Halla Rempt 2020-12-14 13:47:16 UTC
*** Bug 428117 has been marked as a duplicate of this bug. ***
Comment 9 Halla Rempt 2021-01-11 13:31:56 UTC
Git commit bedb488c9926b435ca8a4aec771172e395eb8aab by Halla Rempt, on behalf of Ivan Yossi.
Committed on 11/01/2021 at 13:18.
Pushed by rempt into branch 'master'.

Fix crash whan opening file from finder

M  +27   -0    libs/ui/KisApplication.cpp
M  +2    -0    libs/ui/KisApplication.h

https://invent.kde.org/graphics/krita/commit/bedb488c9926b435ca8a4aec771172e395eb8aab
Comment 10 Tyson Tan 2021-01-12 09:23:49 UTC
Thank you Ivan and Halla! :D
Comment 11 vanyossi 2021-01-14 21:19:09 UTC
Git commit 0ce36d5b7074893a61d18925a9efc32635267a45 by Ivan Yossi.
Committed on 14/01/2021 at 21:18.
Pushed by ivany into branch 'krita/4.4.2'.

Fix crash whan opening file from finder

M  +25   -1    libs/ui/KisApplication.cpp
M  +2    -0    libs/ui/KisApplication.h

https://invent.kde.org/graphics/krita/commit/0ce36d5b7074893a61d18925a9efc32635267a45
Comment 12 vanyossi 2021-01-15 04:54:05 UTC
Git commit 0e8c8307b6ec4e08e7ea5e8a5f8a02a0683135a7 by Ivan Yossi.
Committed on 15/01/2021 at 01:57.
Pushed by ivany into branch 'krita/4.3'.

Fix crash whan opening file from finder

M  +25   -1    libs/ui/KisApplication.cpp
M  +2    -0    libs/ui/KisApplication.h

https://invent.kde.org/graphics/krita/commit/0e8c8307b6ec4e08e7ea5e8a5f8a02a0683135a7