Fix crash whan opening file from finder

BUG:421448