libs/ui/KisApplication.cpp
@@ -119,7 +119,7 @@ public:
     QPointer<KisMainWindow> mainWindow; // The first mainwindow we create on startup
     bool batchRun {false};
     QVector<QByteArray> earlyRemoteArguments;
-
+    QVector<QString> earlyFileOpenEvents;
 };
 
 class KisApplication::ResetStarting
@@ -216,6 +216,23 @@ void KisApplication::initializeGlobals(const KisApplicationArguments &args)
     if (dpiX > 0 && dpiY > 0) {
         KoDpi::setDPI(dpiX, dpiY);
     }
+}
+
+bool KisApplication::event(QEvent *event)
+{
+
+    #ifdef Q_OS_MACOS
+    if (event->type() == QEvent::FileOpen) {
+        QFileOpenEvent *openEvent = static_cast<QFileOpenEvent *>(event);
+        if (d->mainWindow) {
+            emit fileOpenRequest(openEvent->file());
+        } else {
+            d->earlyFileOpenEvents.append(openEvent->file());
+        }
+        return true;
+    }
+    #endif
+    return QApplication::event(event);
 }
 
 void KisApplication::addResourceTypes()
@@ -651,6 +668,13 @@ bool KisApplication::start(const KisApplicationArguments &args)
 
     KisUsageLogger::writeSysInfo(KisUsageLogger::screenInformation());
 
+    // process File open event files
+    if (!d->earlyFileOpenEvents.isEmpty()) {
+        hideSplashScreen();
+        Q_FOREACH(QString fileName, d->earlyFileOpenEvents) {
+            d->mainWindow->openDocument(QUrl::fromLocalFile(fileName), 0);
+        }
+    }
 
     // not calling this before since the program will quit there.
     return true;
